salvando mudanças locais antes do pull

--- a/style.css
+++ b/style.css
@@ -166,3 +166,35 @@ ol {
     box-shadow: none;
 }
 
+.sobre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    background: var(--snd-bg-color);
+}
+
+.sobre img {
+    width: 30vw;
+}
+
+.cabecalho {
+    text-align: center;
+    font-size: 4,5rem;
+}
+
+.sobre-content h2 {
+    text-align: left;
+    line-height: 1.2rem;
+}
+
+.sobre-content h3 {
+    font-size: 2.6rem;
+}
+
+.sobre-content p {
+    font-size: 1.6rem;
+    margin: 2rem 0 3rem;
+}
+
+
