--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ ol {
 .projetos-container .projetos-caixa {
     position: relative;
     border-radius: 2rem;
-    border: 2px solid var(--main-color);
+    border: 2px solid #ffff;
     overflow: hidden;
     display: flex;
     
@@ -287,6 +287,7 @@ ol {
     height: 5rem;
     background: var(--text-color);
     border-radius: 50%;
+    margin-top: 1em;
 }
 
 .projetos-camada a i {
@@ -294,3 +295,93 @@ ol {
     color: var(--snd-bg-color);
 }
 
+.diminuir-img {
+    width: 30rem;
+    height: 25.2rem;
+}
+
+.contato h2 {
+    margin-bottom: 3rem;
+}
+
+.contato form {
+    max-width: 70rem;
+    margin: 3rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.contato form .input-caixa {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contato form .input-caixa input,
+.contato form textarea {
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background: var(--snd-bg-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
+}
+
+.contato form .input-caixa input {
+    width: 49%;
+}
+
+
+.contato form textarea {
+    resize: none;
+}
+
+.contato form .btn {
+    margin-top: 2rem;
+    cursor: pointer;
+}
+
+/* Para navegadores WebKit (Chrome, Safari, Edge) */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Para Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+    background: var(--snd-bg-color);
+}
+
+.footer-texto {
+    font-size: 1.6rem;
+}
+
+.footer-iconeTopo {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: .8rem 1rem;
+    background: var(--main-color);
+    border-radius: .8rem;
+    transition: .5s ease;
+}
+
+.footer-iconeTopo a:hover {
+    box-shadow: 0 0 1rem var(--main-color);
+}
+
+.footer-iconeTopo a i {
+    font-size: 2.4rem;
+    color: var(--snd-bg-color);
+}
